# sift

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REVIEW.md  SKILL.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  setup.sh  skills.toml
.github/workflows/: ci.yml  docker.yml
docs/: architecture.md  data-storage.md  environment-setup.md  openclawd-integration.md  pdf-support.md  quick-start.md
docs/archive/: changes-summary.md  pdf-feature-summary.md  project-review.md
sift/: __init__.py  __main__.py  cli.py  completions.py  config.py  document_analyzer.py  engine.py  error_handler.py  errors.py  i18n.py  interactive.py  models.py  pdf.py  plugins.py  ui.py
sift/analyzers/: __init__.py  ai_analyzer.py  models.py  project_analyzer.py  python_ast_analyzer.py  tree_sitter_analyzer.py
sift/commands/: build_cmd.py  config_cmd.py  demo_cmd.py  doctor_cmd.py  export_cmd.py  import_cmd.py  init_cmd.py  migrate_cmd.py  phase_cmd.py  plugin_cmd.py  session_cmd.py  telemetry_cmd.py  template_cmd.py  workspace_cmd.py
sift/core/: __init__.py  analysis_service.py  build_service.py  config_service.py  export_service.py  extraction_service.py  migration_service.py  secrets.py  session_service.py  template_service.py
sift/integrations/: __init__.py  openclaw.py
sift/locales/: sift.pot
sift/mcp/: __init__.py  server.py
sift/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py
sift/telemetry/: __init__.py  consent.py  service.py
sift/tui/: __init__.py  app.py  session_runner.py  sift.tcss  theme.py  workspace.py
sift/tui/widgets/: __init__.py  capture_form.py  extraction_view.py  phase_panel.py  pipeline.py
templates/: autonomy-engine.yaml  chip-task-intake.yaml  code-review.yaml  deployment-checklist.yaml  design-spec.yaml  discovery-call.yaml  event-bus.yaml  ghost-architecture.yaml  hello-world.yaml  infra-workflow-mapping.yaml  last-mile-assessment.yaml  orchestrator-workflows.yaml  pipeline-stages.yaml  product-discovery.yaml  pulse-feature-clustering.yaml  qa-validation.yaml  rag-embeddings.yaml  workflow-extraction.yaml
tests/: conftest.py  test_accessibility.py  test_analysis_service.py  test_build_service.py  test_completions.py  test_config_service.py  test_doctor.py  test_error_handler.py  test_errors.py  test_export_import.py  test_extraction_service.py  test_i18n.py  test_mcp_server.py  test_migration.py  test_ollama_provider.py  test_plugins.py  test_project_analyzer.py  test_schema_versioning.py  test_session_service.py  test_telemetry.py  test_tui.py  test_validation.py
tests/integration/: test_e2e_session.py
