[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sift-cli"
version = "0.1.0"
description = "Structured session capture & AI extraction CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0"]
gemini = ["google-genai>=1.0.0"]
pdf = ["pdfplumber>=0.10.0", "pypdf>=3.17.0"]
tui = ["textual>=0.50.0"]
analyze = ["tree-sitter>=0.21.0", "tree-sitter-languages>=1.10.0"]
mcp = ["mcp>=1.0.0"]
keyring = ["keyring>=24.0"]
all = [
    "anthropic>=0.18.0",
    "google-genai>=1.0.0",
    "pdfplumber>=0.10.0",
    "pypdf>=3.17.0",
    "textual>=0.50.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.0",
    "mcp>=1.0.0",
    "keyring>=24.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sift = "sift.cli:app"
sift-mcp = "sift.mcp.server:main"

[tool.setuptools.packages.find]
include = ["sift*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
